<resources>
    <string name="app_name">AppEjercicioPractico1</string>
    <string name="loginLBL">Login!</string>
    <string name="OK_BTN">LOGIN</string>
    <string name="BORRAR_BTN">BORRAR</string>
    <string name="botonSI">SI</string>
    <string name="botonNO">NO</string>
    <string name="usuarioTF">Usuario</string>
    <string name="contrasenaTF">Contraseña</string>
    <string name="FavoritosBTN">Favoritos</string>
    <string name="VolverBTN">Volver</string>


</resources>
