<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".DisplayImages">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/galleryView"
        android:layout_gravity="center"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/botonSI"
        android:id="@+id/siBTN"
        android:layout_gravity="left|bottom"
        android:background="@drawable/btn_circle"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/botonNO"
        android:id="@+id/noBTN"
        android:layout_gravity="right|bottom"
        android:background="@drawable/btn_circle"/>

    <Spinner
        android:layout_width="148dp"
        android:layout_height="wrap_content"
        android:id="@+id/spinnerGallery"
        android:drawSelectorOnTop="true"
        android:layout_gravity="left|top"/>

    <Button
        android:layout_width="139dp"
        android:layout_height="wrap_content"
        android:text="@string/FavoritosBTN"
        android:id="@+id/favoritosBTN"
        android:layout_gravity="right|top"/>


</FrameLayout>
